Add header html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Design Is  Corporate Value</title>
 </head>
 <body>
-    
+    <header>
+      <div class="header-logo">
+        <h1><a href="#">Title</a></h1>
+      </div>
+
+      <div class="header-nav">
+        <p><a href="#">About</a></p>
+        <p><a href="#">Contact</a></p>
+      </div>
+    </header>
 </body>
 </html>
