--- a/index.html
+++ b/index.html
@@ -7,15 +7,50 @@
     <title>Design Is  Corporate Value</title>
 </head>
 <body>
-    <header>
-      <div class="header-logo">
-        <h1><a href="#">Title</a></h1>
-      </div>
+    <div id="home" class="big-bg">
+      <header>
+        <div class="header-logo">
+          <h1><a href="#">Title</a></h1>
+        </div>
 
-      <div class="header-nav">
-        <p><a href="#">About</a></p>
-        <p><a href="#">Contact</a></p>
+        <div class="header-nav">
+          <nav>
+            <ul class="main-nav">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <div class="home-content wrapper">
+        <h2>Design <br>Is Corporate Value</h2>
       </div>
-    </header>
+    </div>
+
+    <section id="news">
+      <div class="title">
+        <h2>News</h2>
+      </div>
+    </section>
+
+
+    <section id="blog">
+      <div class="title">
+        <h2>Blog</h2>
+      </div>
+    </section>
+
+    <section id="our-service">
+      <div class="title">
+        <h2>Our Service</h2>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="contact-title">
+        
+      </div>
+    </section>
+
 </body>
 </html>
