--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
 
     <section id="contact">
       <div class="contact-title">
-        
+        <h2>CONTACT</h2>
+      </div>
+
+      <div class="contact-desc">
+        <p>お仕事のご相談、ご連絡は<br>
+            こちらから承っております。まずはお気軽にご相談ください。
+        </p>
+      </div>
+
+      <div class="contact-button">
+        <p><a href="#">お問い合わせ</a></p>
       </div>
     </section>
 
