Finished index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
       <div class="title">
         <h2>News</h2>
       </div>
+
+      <div class="news-contents">
+        <div class="news-content">
+          <img src="#" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+
+        <div class="news-content">
+          <img src="#" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+
+        <div class="news-content">
+          <img src="#" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+      </div>
     </section>
 
 
@@ -38,11 +58,51 @@
       <div class="title">
         <h2>Blog</h2>
       </div>
+
+      <div class="blog-contents">
+        <div class="blog-content">
+          <img src="#" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+
+        <div class="blog-content">
+          <img src="#" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+    
+        <div class="blog-content">
+          <img src="#" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+      </div>
     </section>
 
     <section id="our-service">
       <div class="title">
         <h2>Our Service</h2>
+      </div>
+
+      <div class="service-contents">
+        <div class="service-content">
+          <img src="#" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+
+        <div class="service-content">
+          <img src="#" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+
+        <div class="service-content">
+          <img src="#" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
       </div>
     </section>
 
