Add image & Fix image name

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 
       <div class="news-contents">
         <div class="news-content">
-          <img src="#" alt="#">
+          <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="news-content">
-          <img src="#" alt="#">
+          <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="news-content">
-          <img src="#" alt="#">
+          <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
@@ -61,19 +61,19 @@
 
       <div class="blog-contents">
         <div class="blog-content">
-          <img src="#" alt="#">
+          <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="blog-content">
-          <img src="#" alt="#">
+          <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
     
         <div class="blog-content">
-          <img src="#" alt="#">
+          <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
@@ -87,19 +87,19 @@
 
       <div class="service-contents">
         <div class="service-content">
-          <img src="#" alt="#">
+          <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="service-content">
-          <img src="#" alt="#">
+          <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="service-content">
-          <img src="#" alt="#">
+          <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
