--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <section id="news">
+    <section id="news" class="wrapper">
       <div class="title">
         <h2>News</h2>
       </div>
@@ -54,7 +54,7 @@
     </section>
 
 
-    <section id="blog">
+    <section id="blog" class="wrapper">
       <div class="title">
         <h2>Blog</h2>
       </div>
@@ -80,7 +80,7 @@
       </div>
     </section>
 
-    <section id="our-service">
+    <section id="our-service" class="wrapper">
       <div class="title">
         <h2>Our Service</h2>
       </div>
