--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <section id="news" class="wrapper">
       <div class="title">
         <h2>News</h2>
+        <p class="news-title">News</p>
       </div>
 
       <div class="news-contents">
@@ -57,6 +58,7 @@
     <section id="blog" class="wrapper">
       <div class="title">
         <h2>Blog</h2>
+        <p class="blog-title">Blog</p>
       </div>
 
       <div class="blog-contents">
@@ -83,7 +85,9 @@
     <section id="our-service" class="wrapper">
       <div class="title">
         <h2>Our Service</h2>
+        <p class="service-title">Our Service</p>
       </div>
+      
 
       <div class="service-contents">
         <div class="service-content">
