--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
     <section id="news" class="wrapper">
       <div class="title">
         <h2>News</h2>
-        <p class="news-title">News</p>
+        <p class="news-title kasane">News</p>
       </div>
 
       <div class="news-contents">
-        <div class="news-content">
+        <div class="content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
-        <div class="news-content">
+        <div class="content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
-        <div class="news-content">
+        <div class="content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
@@ -58,23 +58,23 @@
     <section id="blog" class="wrapper">
       <div class="title">
         <h2>Blog</h2>
-        <p class="blog-title">Blog</p>
+        <p class="blog-title kasane">Blog</p>
       </div>
 
       <div class="blog-contents">
-        <div class="blog-content">
+        <div class="content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
-        <div class="blog-content">
+        <div class="content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
     
-        <div class="blog-content">
+        <div class="content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
@@ -85,24 +85,24 @@
     <section id="our-service" class="wrapper">
       <div class="title">
         <h2>Our Service</h2>
-        <p class="service-title">Our Service</p>
+        <p class="service-title kasane">Our Service</p>
       </div>
       
 
       <div class="service-contents">
-        <div class="service-content">
+        <div class="content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
-        <div class="service-content">
+        <div class="content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
-        <div class="service-content">
+        <div class="content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
