--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
           </nav>
         </div>
       </header>
-      <div class="home-content wrapper">
+      <div class="home-content home-wrapper">
         <h2>Design <br>Is Corporate Value</h2>
       </div>
     </div>
 
-    <section id="news" class="wrapper">
+    <section id="news" class="news-wrapper">
       <div class="title">
         <h2>News</h2>
         <p class="news-title kasane">News</p>
@@ -55,7 +55,7 @@
     </section>
 
 
-    <section id="blog" class="wrapper">
+    <section id="blog" class="blog-wrapper">
       <div class="title">
         <h2>Blog</h2>
         <p class="blog-title kasane">Blog</p>
@@ -82,7 +82,7 @@
       </div>
     </section>
 
-    <section id="our-service" class="wrapper">
+    <section id="our-service" class="service-wrapper">
       <div class="title">
         <h2>Our Service</h2>
         <p class="service-title kasane">Our Service</p>
