--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <p><a href="#">お問い合わせ</a></p>
       </div>
     </section>
-
+    
+    <script src="main.js"></script>
 </body>
 </html>
