--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div id="home" class="big-bg">
       <header>
         <div class="header-logo">
-          <h1><a href="#">Title</a></h1>
+          <h1><a href="#">< PARAMS ><br>
+          <span>< design is value/ ></span></a></h1>
         </div>
 
         <div class="header-nav">
@@ -23,7 +24,7 @@
         </div>
       </header>
       <div class="home-content home-wrapper">
-        <h2>Design <br>Is Corporate Value</h2>
+        <h2>Design <br>is Corporate Value</h2>
       </div>
     </div>
 
