--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
       </div>
 
       <div class="news-contents">
-        <div class="content">
+        <div class="content news-content news-content-one">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
-        <div class="content">
+        <div class="content news-content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
-        <div class="content">
+        <div class="content news-content">
           <img src="img/content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
