--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
     </section>
 
-    <section id="contact">
+    <div id="contact">
       <div class="contact-title">
         <h2>CONTACT</h2>
       </div>
@@ -125,7 +125,11 @@
       <div class="contact-button">
         <p><a href="#">お問い合わせ</a></p>
       </div>
-    </section>
+    </div>
+
+    <footer>
+      <small>© 2020 < params ></small>
+    </footer>
     
     <script src="main.js"></script>
 </body>
