Fix image path for index.html

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 
       <div class="news-contents">
         <div class="content news-content news-content-one">
-          <img src="img/content.jpg" alt="#">
+          <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="content news-content">
-          <img src="img/content.jpg" alt="#">
+          <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="content news-content">
-          <img src="img/content.jpg" alt="#">
+          <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
@@ -64,19 +64,19 @@
 
       <div class="blog-contents">
         <div class="content">
-          <img src="img/content.jpg" alt="#">
+          <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="content">
-          <img src="img/content.jpg" alt="#">
+          <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
     
         <div class="content">
-          <img src="img/content.jpg" alt="#">
+          <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
@@ -92,19 +92,19 @@
 
       <div class="service-contents">
         <div class="content">
-          <img src="img/content.jpg" alt="#">
+          <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="content">
-          <img src="img/content.jpg" alt="#">
+          <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
         <div class="content">
-          <img src="img/content.jpg" alt="#">
+          <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
