--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <div id="home" class="big-bg">
       <header>
         <div class="header-logo">
-          <h1><a href="#">< PARAMS ><br>
-          <span>< design is value/ ></span></a></h1>
+          <h1>
+            <a href="#">
+              <p class="main-logo">< PARAMS ></p>
+              <p class="sub-logo">< design is value/ ></p>
+            </a>
+          </h1>
         </div>
 
         <div class="header-nav">
