Add font awesome

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>Design Is  Corporate Value</title>
 </head>
 <body>
@@ -20,6 +21,7 @@
 
         <div class="header-nav">
           <nav>
+            <div><a href="#" id="pull"><i class="fa fa-bars"></i></a></div>
             <ul class="main-nav">
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
