Add details button

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
       </div>
+
+      <div class="details-button">
+        <p><a href="#">詳しく見る</a></p>
+      </div>
     </section>
 
 
@@ -86,6 +90,10 @@
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
+      </div>
+
+      <div class="details-button">
+        <p><a href="#">詳しく見る</a></p>
       </div>
     </section>
 
