--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
+        <div class="content news-content">
+          <img src="content.jpg" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+
+        <div class="content news-content">
+          <img src="content.jpg" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+
         <div class="details-button">
           <p><a href="#">詳しく見る</a></p>
         </div>
@@ -97,6 +109,18 @@
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
     
+        <div class="content">
+          <img src="content.jpg" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+
+        <div class="content">
+          <img src="content.jpg" alt="#">
+          <h3>小タイトル</h3>
+          <p>文章が入ります文章が入ります文章が入ります</p>
+        </div>
+
         <div class="content">
           <img src="content.jpg" alt="#">
           <h3>小タイトル</h3>
