Add hamburger js

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </p>
       </div>
 
-      <div class="contact-button">
+      <div class="contact-button rellax" data-rellax-speed="-2">
         <p><a href="#">お問い合わせ</a></p>
       </div>
     </div>
@@ -181,9 +181,7 @@
       <small>© 2020 < params ></small>
     </footer>
     
-    <script>
-      console.log("Hello Lololia");
-      
-    </script>
+    <script src="rellax.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
