--- a/index.html
+++ b/index.html
@@ -11,29 +11,31 @@
 </head>
 <body>
     <div id="home" class="big-bg">
-      <header>
-        <div class="header-logo">
-          <h1>
-            <a href="#">
-              <p class="main-logo">< PARAMS ></p>
-              <p class="sub-logo">< design is value/ ></p>
-            </a>
-          </h1>
-        </div>
+      <!-- <div id="cover"> -->
+        <header>
+          <div class="header-logo">
+            <h1>
+              <a href="#">
+                <p class="main-logo">< PARAMS ></p>
+                <p class="sub-logo">< design is value/ ></p>
+              </a>
+            </h1>
+          </div>
 
-        <div class="header-nav">
-          <nav>
-            <div><a href="#" id="pull"><i class="fa fa-bars"></i></a></div>
-            <ul class="main-nav">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </nav>
+          <div class="header-nav">
+            <nav>
+              <div><a href="#" id="pull"><i class="fa fa-bars"></i></a></div>
+              <ul class="main-nav">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        </header>
+        <div class="home-content home-wrapper">
+          <h2>Design <br>is Corporate Value</h2>
         </div>
-      </header>
-      <div class="home-content home-wrapper">
-        <h2>Design <br>is Corporate Value</h2>
-      </div>
+      <!-- </div> -->
     </div>
 
     <section id="news" class="news-wrapper">
