--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Design Is  Corporate Value</title>
 </head>
 <body>
+  <div id="cover">
     <div id="home" class="big-bg">
-      <!-- <div id="cover"> -->
         <header>
           <div class="header-logo">
             <h1>
@@ -35,7 +35,6 @@
         <div class="home-content home-wrapper">
           <h2>Design <br>is Corporate Value</h2>
         </div>
-      <!-- </div> -->
     </div>
 
     <section id="news" class="news-wrapper">
@@ -182,7 +181,7 @@
     <footer>
       <small>© 2020 < params ></small>
     </footer>
-    
+  </div>
     <script src="rellax.min.js"></script>
     <script src="js/main.js"></script>
 </body>
