--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 </head>
 <body>
   <div id="cover">
+    <div class="cover-nav">
+      <p>×</p>
+      <h3>menu</h3>
+      <nav>
+        <ul>
+          <li><a href="#">- About</a></li>
+          <li><a href="#">- Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div id="home" class="big-bg">
         <header>
           <div class="header-logo">
