--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <div id="cover">
-    <div class="cover-nav">
-      <p>×</p>
+    <div id="menu" class="cover-nav">
+      <p id="hide">×</p>
       <h3>menu</h3>
       <nav>
         <ul>
@@ -34,7 +34,7 @@
 
           <div class="header-nav">
             <nav>
-              <div><a href="#" id="pull"><i class="fa fa-bars"></i></a></div>
+              <div id="pull"><i id="show" class="fa fa-bars fa-lg"></i></div>
               <ul class="main-nav">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
@@ -192,7 +192,7 @@
       <small>© 2020 < params ></small>
     </footer>
   </div>
-    <script src="rellax.min.js"></script>
+    <!-- <script src="rellax.min.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 </html>
