デザイン修正

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p class="news-title kasane">News</p>
       </div>
 
-      <div class="news-contents">
+      <div class="over-flow news-contents">
         <div class="content news-content news-content-one">
           <img src="content.jpg" alt="#" />
           <h3>小タイトル</h3>
@@ -84,7 +84,7 @@
         <p class="blog-title kasane">Blog</p>
       </div>
 
-      <div class="blog-contents">
+      <div class="over-flow blog-contents">
         <div class="content">
           <img src="content.jpg" alt="#" />
           <h3>小タイトル</h3>
@@ -115,7 +115,7 @@
         <p class="service-title kasane">Our Service</p>
       </div>
 
-      <div class="service-contents">
+      <div class="over-flow service-contents">
         <div class="content">
           <img src="content.jpg" alt="#" />
           <h3>小タイトル</h3>
