--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
           <div class="header-logo">
             <h1>
               <a href="#">
-                <p class="main-logo">< PARAMS ></p>
-                <p class="sub-logo">< design is value/ ></p>
+                <img src="images/params-logo.jpg" alt="paramsのロゴ">
               </a>
             </h1>
           </div>
@@ -69,7 +68,7 @@
         <button type="button" class="slider-ctrl-btn is-next" data-ctrl="next">Ra-men</button>
       </div>
 
-      <div class="news-contents">
+      <div class="over-flow news-contents">
         <div class="content news-content news-content-one">
           <img src="content.jpg" alt="#" />
           <h3>小タイトル</h3>
@@ -117,7 +116,7 @@
         <button type="button" class="slider-ctrl-btn is-next" data-ctrl="next">Bishojo</button>
       </div>
 
-      <div class="blog-contents">
+      <div class="over-flow blog-contents">
         <div class="content">
           <img src="content.jpg" alt="#" />
           <h3>小タイトル</h3>
@@ -160,20 +159,20 @@
         <p class="service-title kasane">Our Service</p>
       </div>
 
-      <div class="service-contents">
-        <div class="content">
+      <div class="over-flow service-contents">
+        <div class="service-content service-sub">
           <img src="content.jpg" alt="#" />
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
-        <div class="content">
+        <div class="service-content service-pickup">
           <img src="content.jpg" alt="#" />
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
         </div>
 
-        <div class="content">
+        <div class="service-content service-sub">
           <img src="content.jpg" alt="#" />
           <h3>小タイトル</h3>
           <p>文章が入ります文章が入ります文章が入ります</p>
